Fixes applied based on recommended changes from Git review.